fix: git change markers color not properly visible in light theme

--- a/src/styles/Extn-TabBar.less
+++ b/src/styles/Extn-TabBar.less
@@ -426,7 +426,7 @@
 /* ------ for the git status markers -------------- */
 .tab.git-modified > .tab-icon:before {
     content: "|";
-    color: #E3B551;
+    color: #f1ae1c;
     position: absolute;
     margin-left: -4px;
     margin-bottom: 5px;
@@ -438,7 +438,7 @@
 
 .tab.git-new > .tab-icon:before {
     content: "|";
-    color: #91CC41;
+    color: #69a01f;
     position: absolute;
     margin-left: -4px;
     margin-bottom: 5px;
